Corrections started: typos.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -50,7 +50,7 @@ Alternate realities, explored in the context of this thesis as any situation in 
 	\textit{``It is a characteristic feature of virtuality that it causes puzzlement regarding its relation to reality''}~\cite{Brey2014}
 \end{quote}
 
-The need for a well formulated framework of terms and related definitions for different alternate reality concepts has lead to several models that attempt to facilitate better understanding of the distinctions between different categories of alternate reality, most prominent among them the work of Milgram and Kishino in introducing the taxonomy of the reality-virtuality continuum. Not all of these frameworks have agreed upon their definitions of certain categories however, and in some instances there are even cases of contradiction.
+The need for a well formulated framework of terms and related definitions for different alternate reality concepts has led to several models that attempt to facilitate better understanding of the distinctions between different categories of alternate reality, most prominent among them the work of Milgram and Kishino in introducing the taxonomy of the reality-virtuality continuum. Not all of these frameworks have agreed upon their definitions of certain categories however, and in some instances there are even cases of contradiction.
 
 %=========================================================================================================
 
@@ -93,7 +93,7 @@ Steve Mann, the \textit{``father of wearable computing''}\footnote{\url{http://w
 
 %Alone Together p 151
 
-In this thesis, where we are concerned with alternate realities as those that are created or modified through means of computers or other apparatus (Mann's `devices'), one might want to consider the terms mediated reality and alternate reality to be one and the same. However in the larger consideration of virtual worlds as quoted in section \ref{intro-parallel-reality}, one might wish to reserve mediated reality specifically for the sub set of experiences that rely upon the application of `devices', whilst the super set of all alternate realities would contain in addition those experiences of simple imagination, storytelling and psychoactive agents.
+In this thesis, where we are concerned with alternate realities as those that are created or modified through means of computers or other apparatus (Mann's `devices'), one might want to consider the terms mediated reality and alternate reality to be one and the same. However in the larger consideration of virtual worlds as quoted in section \ref{intro-parallel-reality}, one might wish to reserve mediated reality specifically for the sub set of experiences that rely upon the application of `devices', whilst the super set of all alternate realities would contain, in addition, those experiences of simple imagination, storytelling and psychoactive agents.
 
 Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality as a subset of mixed reality, but then further places virtual reality as a subset of augmented reality and in turn mixed reality, a decision not in fitting with Milgram and Kishino's definitions nor with logical deduction. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can and do exist. Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is arguably contrary to his diagram's representation of virtual reality as a subset of augmented reality and in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality in Milgram and Kishino's definition, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced here for those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment and a wholly virtual environment as the logically possible extremes, as in the reality-virtuality continuum and Steed's concept of primary environments).
 
