--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -131,8 +131,8 @@ The Open Virtual Worlds (OVW) research group at the School of Computer Science a
   \label{caen_township_outside.jpg}
 \end{figure}
 
-\TwoFig{cathedral_npc_standing.png} {Virtual humans in cathedral reconstruction.} {cathedral_npc_standing.png}
-       {cathedral_npc_talking.png} {Conversing with virtual humans in cathedral reconstruction.} {cathedral_npc_talking.png}
+\TwoFig{cathedral_npc_standing.png} {Virtual humans in the cathedral reconstruction.} {cathedral_npc_standing.png}
+       {cathedral_npc_talking.png} {Conversing with virtual humans in the cathedral reconstruction.} {cathedral_npc_talking.png}
 
 \pagebreak
 
@@ -315,7 +315,7 @@ Although the 10Hz update rate of the HMC6343 is much lower than those sported by
 
 A magnetometer used independently is only capable of providing a meaningful compass bearing when held level. In the case of applications where a compass bearing is required of a device that is not maintained level, such as in the case of VTW, the non-level orientation of the device must be taken into account to offset the readings of the magnetometer and provide a correct compass bearing. The HMC6343's combination of magnetometer, accelerometer and algorithms provides a single package that internally performs this process, using the readings from its accelerometer to compensate the readings from its magnetometer and provide a meaningful compass bearing in non-level orientations.
 
-Further requirements for obtaining accurate compass bearings from a MEMS magnetometer are to account for distortions to the magnetic field it senses and to compensate the bearings it reports for the amount of magnetic declination at the location and date whereupon it is used. Various materials that influence magnetic fields or produce their own magnetic field distort the Earth's magnetic field and this impacts the readings that a MEMS magnetometer collects. In the case of VTW, the primary sources of consideration were the electronics of the Arduino, tablet and associated wiring. Due to the nature of these sources and the fact that they were permanently situated and attached to the same frame of reference as the magnetometer, moving as it moves, the distortions could be mitigated using a hard iron offset approach\footnote{\url{http://www.freescale.com/files/sensors/doc/app_note/AN4246.pdf}}. Magnetic declination refers to the difference between `magnetic north' and geographic `true north' and varies depending upon world location and changes over time, so must be updated when the magnetometer is deployed to a different location or used at a subsequent date.
+Further requirements for obtaining accurate compass bearings from a MEMS magnetometer are to account for distortions to the magnetic field it senses and to compensate the bearings it reports for the amount of magnetic declination at the location and date where it is used. Various materials that influence magnetic fields or produce their own magnetic field distort the Earth's magnetic field and this impacts the readings that a MEMS magnetometer collects. In the case of VTW, the primary sources of consideration were the electronics of the Arduino, tablet and associated wiring. Due to the nature of these sources and the fact that they were permanently situated and attached to the same frame of reference as the magnetometer, moving as it moves, the distortions could be mitigated using a hard iron offset approach\footnote{\url{http://www.freescale.com/files/sensors/doc/app_note/AN4246.pdf}}. Magnetic declination refers to the difference between `magnetic north' and geographic `true north' and varies depending upon world location and changes over time, so must be updated when the magnetometer is deployed to a different location or used at a subsequent date.
 
 %***Reference for hard iron offset - here or later where we talk about the hex?
 
@@ -464,7 +464,7 @@ Applying the scale of the reconstruction to these values gives $\Delta$x and $\D
 
 The WindPad features an internal AzureWave GPS-M16 GPS receiver\azurewaveFootnote{}, however poor API provision and meagre documentation required the adoption of an alternative receiver. As an Arduino was already being used to provide orientation data from accelerometer and magnetometer, integrating the GPS receiver into this package such that all orientation and position data came from a single interface was prudent. After receiving input and advice from the UK High Altitude Society, \textit{``a loose collection of people who are interested in launching unmanned high altitude balloons into near space''}\habFootnote{} who make extensive use of GPS receivers for tracking their launches, the u-blox MAX-6\ubloxFootnote{} GPS receiver outfitted with a Sarantel SL-1202\sarantelFootnote{} passive antenna was chosen to provide position data for the VTW platform. The MAX-6 is of higher operational specification than the GPS-M16 and supports Satellite Based Augmentation Systems (SBAS), which improves the accuracy of location data by applying additional correction data received from networks of satellites and ground-based transmitters separate to those of the GPS satellites. These networks include the European Geostationary Navigation Overlay Service (EGNOS) that covers the UK where the VTW platform was developed and evaluated.
 
-Figure \ref{arduino_wiring_hmc_ublox.png} provides a wiring diagram for connectivity of a u-blox MAX-6 to an Arduino Uno R3, along with the HMC6343 from section \ref{OrientationControl}, with the pinout values provided by tables \ref{HMC6343_MAX6_wiringtable_HMC6343} and \ref{HMC6343_MAX6_wiringtable_MAX6}. The LED and 220$\Omega$ resistor on digital pin 12 is used for diagnostic output. The wiring shown here is for a MAX-6 breakout without I2C connectivity, instead using Arduino's SoftwareSerial\softwareserialFootnote{} library. Figure \ref{arduino_hmc6343_u-blox_MAX-6.jpg} shows the assembled unit, comprising an Arduino Uno R3, prototyping shield, HMC6343 and MAX-6, while figure \ref{pangolin_tablet_back.jpg} shows this package attached to the back of the WindPad with the single required USB cable connecting the two.
+Figure \ref{arduino_wiring_hmc_ublox.png} provides a wiring diagram for connectivity of a u-blox MAX-6 to an Arduino Uno R3, along with the HMC6343 from section \ref{OrientationControl}, with the pinout values provided by tables \ref{HMC6343_MAX6_wiringtable_HMC6343} and \ref{HMC6343_MAX6_wiringtable_MAX6}. The LED and 220$\Omega$ resistor on digital pin 12 is used for diagnostic output. The wiring shown here is for a MAX-6 breakout without I$^{2}$C connectivity, instead using Arduino's SoftwareSerial\softwareserialFootnote{} library. Figure \ref{arduino_hmc6343_u-blox_MAX-6.jpg} shows the assembled unit, comprising an Arduino Uno R3, prototyping shield, HMC6343 and MAX-6, while figure \ref{pangolin_tablet_back.jpg} shows this package attached to the back of the WindPad with the single required USB cable connecting the two.
 
 \begin{figure}[h]
 \centering
@@ -912,7 +912,7 @@ The Hausdorff distance between the planned route and that recorded by the MAX-6 
 
 The MAX-6 achieved better performance than the smartphone which recorded a Hausdorff distance of $1.33e^{-04\circ}$ ($\pm14.8$m N/S, $\pm8.2$m E/W). The Hausdorff distance between the routes logged by the MAX-6 and the smartphone was $1.14e^{-04\circ}$ ($\pm12.7$m N/S, $\pm7.0$m E/W) which represents a low correlation between the inaccuracies recorded by the two receivers even though they are of similar magnitudes from the planned route.
 
-The maximum inaccuracies were recorded when walking along the South wall of the cathedral's nave. This wall is one of the most complete sections of the building with stonework reaching some 30ft above ground level (as can be seen in figure \ref{cathedral_real_outside.jpg} and in the shadows cast in figure \ref{vtw_all_routes.png}) which provides an effective obstruction to line-of-sight to half of the sky (and thus substantially impairing reception of signals from GPS satellites) when in proximity to it. This issue has been encountered in some earlier sitsim experiments~\cite{Liestøl2014}. When considering just the sub-track shown in figure \ref{vtw_alll_routes_first_half.png}, which terminates before this wall begins to significantly obstruct view of the sky, the Hausdorff distances are notably smaller; the MAX-6 achieved a Hausdorff distance of $7.23e^{-05\circ}$ ($\pm8.05$m N/S, $\pm4.47$m E/W), with the smartphone still behind with $8.99e^{-05\circ}$ ($\pm10.01$m N/S, $\pm5.56$m E/W). Again the Hausforff distance between the receivers showed low correlation between the inaccuracies, at $6.43e^{-05\circ}$ ($\pm7.12$m N/S, $\pm3.98$m E/W).
+The maximum inaccuracies were recorded when walking along the South wall of the cathedral's nave. This wall is one of the most complete sections of the building with stonework reaching some 30ft above ground level (as can be seen in figure \ref{cathedral_real_outside.jpg} and in the shadows cast in figure \ref{vtw_all_routes.png}) which provides an effective obstruction to line-of-sight to half of the sky (and thus substantially impairing reception of signals from GPS satellites) when in proximity to it. This issue has been encountered in some earlier sitsim experiments~\cite{Liestøl2014}. When considering just the sub-track shown in figure \ref{vtw_alll_routes_first_half.png}, which terminates before this wall begins to significantly obstruct view of the sky, the Hausdorff distances are notably smaller; the MAX-6 achieved a Hausdorff distance of $7.23e^{-05\circ}$ ($\pm8.05$m N/S, $\pm4.47$m E/W), with the smartphone still behind with $8.99e^{-05\circ}$ ($\pm10.01$m N/S, $\pm5.56$m E/W). Again the Hausdorff distance between the receivers showed low correlation between the inaccuracies, at $6.43e^{-05\circ}$ ($\pm7.12$m N/S, $\pm3.98$m E/W).
  
 \begin{figure}[h]
 \centering
@@ -970,7 +970,7 @@ The accuracy of the camera control during testing was sufficient, however the sp
 
 When considering the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} it is important to remember that this figure represents the worst case scenario and is not necessarily a good indication of average performance. This value, analogous to $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points to guarantee that they are correctly differentiated between, however it does not mean that two points separated by less than this distance will \textit{never} be correctly differentiated between.
 
-Considering the first scenario of static viewpoints this level of positional accuracy is plenty sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
+Considering the first scenario of static viewpoints this level of positional accuracy is sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
 Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient during the evaluation to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway nor to examine an object closely when standing still, due to the manner in which the position data did not `settle', when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size this level of accuracy is sufficient for some freeform exploration. For example when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper (a situation shown in figure \ref{vtw_in_use.jpg}), the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 5m did not seem to pose any problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent, a relationship observed by Wither et al. when experimenting with indirect augmented reality.
 
