--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -744,7 +744,7 @@ Figure \ref{experimentalimplementation} presents an overview of the individual c
 \subsection{Hardware Components}
 The hardware components of the system that were carried by the user comprised:
 \begin{itemize}
-	\item An Oculus Rift DK1 HMD modified by the addition of a stereo camera video see-through solution comprising 2x Logitech C310 webcams modified with S-mount lens mounts and 2.1mm lenses to provide approximately 81.2\textdegree\ horizontal FOV of the RW environment.
+	\item An Oculus Rift DK1 HMD modified by the addition of a stereo camera video see-through solution comprising 2 Logitech C310 webcams modified with S-mount lens mounts and 2.1mm lenses to provide approximately 81.2\textdegree\ horizontal FOV of the RW environment.
 	\item A 12,000mAh USB battery pack, capable of outputting 2.1A at 5V, to power the DK1.
 	\item A Clevo W110ER laptop computer, with an Intel i7-3632QM four-core/eight-thread processor, Nvidia GT 650M graphics card, 16GiB system memory and a SSD to allow safe operation while moving, running Windows 7 Enterprise.
 	\item A Google Nexus 5 smartphone, running Android 4.4.4.
@@ -756,7 +756,7 @@ Figure \ref{DSCN0198.jpg} shows an overview of this hardware: the laptop compute
 \TwoFig{DSCN0198.jpg}{Hardware of the Mirrorshades platform carried by the user.}{DSCN0198.jpg}
        {DSCN0191.jpg}{Detail of Mirrorshades control box bundle.}{DSCN0191.jpg}
 
-The laptop and control box bundle were carried in a satchel worn over the user's shoulder, the smartphone was held in their left hand and the Xbox controller was held in their right hand. In addition to this hardware carried by the user, a remote server was used to provide a MySQL database. During the user studies at St Salvator's chapel the server used had an Intel Xeon E3-1270 four-core/eight-thread processor, 32GiB RAM, 4x WD RE4 1TB hard disks in software RAID6 and 100mbit/s Internet connectivity. This server was running the Debian stable release, with a standard LAMP stack and used mdadm for RAID management.
+The laptop and control box bundle were carried in a satchel worn over the user's shoulder, the smartphone was held in their left hand and the Xbox controller was held in their right hand. In addition to this hardware carried by the user, a remote server was used to provide a MySQL database. During the user studies at St Salvator's chapel the server used had an Intel Xeon E3-1270 four-core/eight-thread processor, 32GiB RAM, 4 WD RE4 1TB hard disks in software RAID6 and 100mbit/s Internet connectivity. This server was running the Debian stable release, with a standard LAMP stack and used mdadm for RAID management.
 
 \subsection{Software Components}
 The software components of the system comprised:
