--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -35,7 +35,7 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 
 \begin{itemize}
 	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience complete real and virtual environments in tandem and represents an avenue for further mitigation of the vacancy problem.
-	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminologies.
+	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminology.
 	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
 	\item Development of a second parallel reality platform, dubbed Mirrorshades, that uses the Unity game engine to combine new virtual reality hardware with novel indoor positioning technology.
