--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -148,10 +148,10 @@ All participants completed a pre-task questionnaire which provided calibration f
 A total of 6 participants completed the stage 1 evaluation:
 \begin{itemize}
 	\item Age ranged from 21 to 26, with a mean of 23.3 and a standard deviation of 1.86.
-	\item 3x identified as male and 3x as female.
+	\item 3 identified as male and 3 as female.
 	\item All reported previous experience with a games console controller.
-	\item 1x reported previous experience with a HMD.
-	\item 2x reported having previously visited the real world chapel.
+	\item 1 reported previous experience with a HMD.
+	\item 2 reported having previously visited the real world chapel.
 	\item None had previously experienced the virtual chapel.
 \end{itemize}
 
@@ -197,7 +197,7 @@ It is worth noting that although the parallel reality scenario scored lower than
 \label{stage1interviews}
 Studying the structured interviews that were conducted after participants had completed both scenarios (interviews were recorded and subsequently transcribed) provided a wealth of qualitative feedback.
 
-All participants said that the parallel reality scenario was more engaging than the seated VR scenario, even though 2x participants said that they preferred the seated VR scenario overall. Of these 2x,  one did not find it comfortable to walk while wearing the DK1 and the other reported gaining a better understanding of the past from the seated VR scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches and was not changed to account for different participant heights as this would have required lengthy recalibration for each and every participant. For a participant of average height the discrepancy between their RW viewpoint and their VR viewpoint was minimal, however for a particularly short or particularly tall participant this discrepancy would have been much greater and may have contributed to the discomfort of walking with the DK1 as each transition between RW and VR would have resulted in a perceptible shift in height of the viewpoint.
+All participants said that the parallel reality scenario was more engaging than the seated VR scenario, even though 2 participants said that they preferred the seated VR scenario overall. Of these 2,  one did not find it comfortable to walk while wearing the DK1 and the other reported gaining a better understanding of the past from the seated VR scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches and was not changed to account for different participant heights as this would have required lengthy recalibration for each and every participant. For a participant of average height the discrepancy between their RW viewpoint and their VR viewpoint was minimal, however for a particularly short or particularly tall participant this discrepancy would have been much greater and may have contributed to the discomfort of walking with the DK1 as each transition between RW and VR would have resulted in a perceptible shift in height of the viewpoint.
 
 Those that preferred the parallel reality scenario alluded to the immediacy of comparison between RW and VR as a contributing factor to this preference. Twice as many participants reported that the parallel reality scenario made it easier to spot differences between RW and VR than the seated VR scenario, with 4 out of 6 participants reporting that they noticed differences in the parallel reality scenario that they did not notice in the seated VR scenario. In particular, several participants mentioned the different position of the rood screen; one participant who didn't notice this difference during the seated VR scenario commented that the parallel reality scenario made it \textit{``blatantly obvious''}. Another participant was able to list multiple differences that s/he had spotted in the parallel reality scenario that they had not noticed in the seated VR scenario. One participant directly mentioned that the immediacy of comparison between RW and VR in the parallel reality scenario was what allowed them to spot more differences, another mentioned that with the seated VR scenario it was not clear that you were \textit{``trying to look into the past''} but in the parallel reality scenario it was obvious because \textit{``you can see the differences''}, while another said that s/he preferred the parallel reality scenario because \textit{``it was easier to compare and contrast between the real world and the virtual one''}.
 
@@ -632,7 +632,7 @@ The stage 2.1 evaluation was conducted using a similar approach as that employed
 
 \begin{enumerate}
 	\item \textbf{Seated VR scenario} - Participants explored the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring their view of the RW chapel around them.
-	\item \textbf{Parallel reality scenario with transitions 1-3} - (Referred to as `scenario 1-3') Participants experienced the RW and VR chapels in tandem using the Mirrorshades platform. They wore the DK1, held the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen was 100\% RW and they were granted access to 3x different transition styles:
+	\item \textbf{Parallel reality scenario with transitions 1-3} - (Referred to as `scenario 1-3') Participants experienced the RW and VR chapels in tandem using the Mirrorshades platform. They wore the DK1, held the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen was 100\% RW and they were granted access to 3 different transition styles:
 	\begin{enumerate}
 		\item Hard transition (section \ref{sub-hardswitch}) mapped to controller \texttt{[A]} button (referred to as `transition 1').
 		\item Transition with linear interpolation (section \ref{transition-with-linear-interpolation}) mapped to controller \texttt{[B]} button (referred to as `transition 2').
@@ -641,7 +641,7 @@ The stage 2.1 evaluation was conducted using a similar approach as that employed
 	\item \textbf{Parallel reality scenario with transitions 1-4} - (Referred to as `scenario 1-4') Participants experienced the same scenario as scenario 2, however this time with the introduction of the periodic hard transition (section \ref{subsub-periodic}, referred to as `transition 4') which would trigger a 0.15 second transition to 100\% VR every 3 seconds. The 3 second timer was reset each time the user manually triggered a transition using any one of transitions 1-3.
 \end{enumerate}
 
-In the parallel reality scenario with transitions 1-3 pressing and holding the \texttt{[A]} button triggered a hard transition from 100\% RW to 100\% VR, pressing and holding the \texttt{[B]} button triggered a linear interpolated transition from 100\% RW to 100\% VR and pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the video see-through camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled. Pulling the trigger all the way in would reduce the opacity of the objects to 0\% and thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% and thus display 66\% RW and 33\% VR, etc. In the parallel reality scenario with transitions 1-4 participants were granted access to the same 3x transitions via the Xbox controller and additionally the 4th transition of the periodic hard transition was triggered every 3 seconds for a duration of 0.15 seconds.
+In the parallel reality scenario with transitions 1-3 pressing and holding the \texttt{[A]} button triggered a hard transition from 100\% RW to 100\% VR, pressing and holding the \texttt{[B]} button triggered a linear interpolated transition from 100\% RW to 100\% VR and pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the video see-through camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled. Pulling the trigger all the way in would reduce the opacity of the objects to 0\% and thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% and thus display 66\% RW and 33\% VR, etc. In the parallel reality scenario with transitions 1-4 participants were granted access to the same 3 transitions via the Xbox controller and additionally the 4th transition of the periodic hard transition was triggered every 3 seconds for a duration of 0.15 seconds.
 
 Rather than describing a path through the chapel with particular positions of interest to stop and look around at, participants were simply told to slowly make their way from the starting position at the West end of the chapel down to the altar at the East end of the chapel. During the stage 1 evaluation participants' exploration sometimes seemed to be restrained by their adherence to the described route. In order to promote a more natural style of exploration the use of a roughly described route was removed from the second stage of the evaluations.
 
@@ -652,10 +652,10 @@ Rather than describing a path through the chapel with particular positions of in
 A total of 7 participants completed the stage 2.1 evaluation:
 \begin{itemize}
 	\item Age ranged from 18 to 27, with a mean of 22.3 and a standard deviation of 4.
-	\item 5x identified as male and 2x as female.
+	\item 5 identified as male and 2 as female.
 	\item All reported previous experience with a games console controller.
 	\item None reported previous experience with a HMD.
-	\item 2x reported having previously visited the real world chapel.
+	\item 2 reported having previously visited the real world chapel.
 	\item None reported having previously experienced the virtual chapel.
 \end{itemize}
 
@@ -698,9 +698,9 @@ Recordings of the structured interviews were transcribed after the chapel sessio
 
 Every single participant said that they preferred scenario 1-3 over scenario 1-4. In particular, one participant  reported that each time scenario 1-4 triggered an automatic transition (transition 4) s/he had to stop to regain their bearings, with another reporting that each automatic transition meant having to \textit{``stop and work it out again''}, a fairly direct description of how increased cognitive load caused by the uncontrollable/unexpected transition overpowered the ability to process environmental stimuli - a break in presence. Several participants noted that they felt more \textit{``in control''} during scenario 1-3 than during scenario 1-4. Transition 4 was reported as being particularly off-putting when inaccuracy in the IPS had placed the virtual vantage at a position notably different to the participant's real position, especially when this resulted in virtual and real positions being on opposite sides of a wall.
 
-Roughly half of the participants said that scenario 1-3 was more engaging, one found the scenarios roughly similar, and 2x found scenario 1-4 to be more engaging although they mentioned that this could simply have been down to increased familiarity with the system. Several participants said that transition 4 was \textit{``unexpected''}, leading to a less \textit{``consistent''} experience.
+Roughly half of the participants said that scenario 1-3 was more engaging, one found the scenarios roughly similar, and 2 found scenario 1-4 to be more engaging although they mentioned that this could simply have been down to increased familiarity with the system. Several participants said that transition 4 was \textit{``unexpected''}, leading to a less \textit{``consistent''} experience.
 
-Responses were mixed when asked whether one scenario allowed for perception of more differences between RW and VR. 3x participants reported experiencing no difference between the scenarios in this regard. 2x answered that they found scenario 1-3 better, one because the flash threw him/her off, the other because \textit{``you could fade between''}  (although this feature, transition 3, was available in both scenarios). The remaining 2x chose 1-4 as better, one because transition 4 would happen when s/he wasn't prepared for a transition and they would \textit{``notice that something had moved, whereas if I knew I was switching I would maybe subconsciously expecting things to move''}, an observation that likens to the `sudden discovery' aspect of Briand's Hagia Eirene piece (see section \ref{the-mirrorshades-platform}).
+Responses were mixed when asked whether one scenario allowed for perception of more differences between RW and VR. 3 participants reported experiencing no difference between the scenarios in this regard. 2 answered that they found scenario 1-3 better, one because the flash threw him/her off, the other because \textit{``you could fade between''}  (although this feature, transition 3, was available in both scenarios). The remaining 2 chose 1-4 as better, one because transition 4 would happen when s/he wasn't prepared for a transition and they would \textit{``notice that something had moved, whereas if I knew I was switching I would maybe subconsciously expecting things to move''}, an observation that likens to the `sudden discovery' aspect of Briand's Hagia Eirene piece (see section \ref{the-mirrorshades-platform}).
 
 All but one participant reported preferring transition 3 accessed via the right trigger \texttt{[RT]} to the other transitions. The one participant who answered otherwise elaborated that they did not notice much difference between the different transition styles and when thinking back to the scenarios was \textit{``not sure which one I was using now!''}. Looking at the log data for this participant however (see section \ref{2-1-log-data}) they did nonetheless make use of all the transition styles in both scenarios 1-3 and 1-4, heavily favouring transition 1 in scenario 1-4. When asked why they preferred transition 3, participants reported liking how being able to control the opacity allowed them to \textit{``see elements of both''} environments at once, to \textit{``simultaneously measure the historical differences''}, with the trigger also giving them more \textit{``control''}.
 
@@ -1181,7 +1181,7 @@ Looking specifically at the results for SP3 and INV2 (table \ref{sp3-inv2-2-1-ta
 
 \subsection{Graphical Performance}
 \label{stage-2-1-framerates}
-Framerates throughout the stage 2.1 evaluation (see figure \ref{framerates_2-1.png}) were largely as was to be expected after the platform's performance in stage 1 (see section \ref{stage-1-framerates}) with the seated VR scenario achieving slightly higher overall framerates with a mean of 53.2 fps (for the 3x participants for which these data were recorded) than the parallel reality scenarios that averaged 44.5 fps in scenario 1-3 and 41.1 fps in scenario 1-4. The difference between the seated VR scenario and the parallel reality scenarios was smaller than in the stage 1 evaluation, with the parallel reality scenarios exhibiting a 16.4\% slowdown compared to the 25.2\% slowdown seen in stage 1. The explanation for this is not immediately clear; it could be related to the introduction of the ability to view both real and virtual environments simultaneously via transition 3, which may be less complex to render in terms of the culling masks than completely culling real or virtual visuals, or it could simply be a result of a newer graphics driver leading to improved performance.
+Framerates throughout the stage 2.1 evaluation (see figure \ref{framerates_2-1.png}) were largely as was to be expected after the platform's performance in stage 1 (see section \ref{stage-1-framerates}) with the seated VR scenario achieving slightly higher overall framerates with a mean of 53.2 fps (for the 3 participants for which these data were recorded) than the parallel reality scenarios that averaged 44.5 fps in scenario 1-3 and 41.1 fps in scenario 1-4. The difference between the seated VR scenario and the parallel reality scenarios was smaller than in the stage 1 evaluation, with the parallel reality scenarios exhibiting a 16.4\% slowdown compared to the 25.2\% slowdown seen in stage 1. The explanation for this is not immediately clear; it could be related to the introduction of the ability to view both real and virtual environments simultaneously via transition 3, which may be less complex to render in terms of the culling masks than completely culling real or virtual visuals, or it could simply be a result of a newer graphics driver leading to improved performance.
 
 \begin{figure}[h]
 	\begin{center}
@@ -1250,10 +1250,10 @@ As the controlled variable between the two parallel reality scenarios was based 
 4 participants completed the stage 2.2 evaluation:
 \begin{itemize}
 	\item Age ranged from 19 to 38, with a mean of 24.3 and a standard deviation of 9.2.
-	\item 2x identified as male and 2x as female.
-	\item 3x reported previous experience with a games console controller.
+	\item 2 identified as male and 2 as female.
+	\item 3 reported previous experience with a games console controller.
 	\item None reported previous experience with a HMD.
-	\item 1x reported having previously visited the real world chapel.
+	\item 1 reported having previously visited the real world chapel.
 	\item None reported having previously experienced the virtual chapel.
 \end{itemize}
 
@@ -1568,7 +1568,7 @@ When considering SP3 and INV2 in isolation, the mean SP3 for the seated VR scena
 \subsection{Graphical Performance}
 \label{stage-2-2-framerates}
 
-Once again the seated VR scenario provided the highest framerates (for the 2x participants for whom these data were captured) out of the three scenarios with an average of 53.8 fps. Both parallel reality scenarios performed slightly slower with an average of 47.7 fps during the 75/25 scenario and 48.3 fps during the 50/50 scenario. Figure \ref{framerates_2-2.png} presents these figures. The difference between the seated VR and the parallel reality scenarios was further reduced in this stage of the evaluation to an 11.3\% slowdown, lower than the 16.4\% slowdown measured in the stage 2.1 evaluation and substantially lower than the 25.2\% slowdown measured in the stage 1 evaluation. The fact that the stage 2.2 parallel reality scenarios were predominantly rendering both real and virtual visuals simultaneously lends weight to the possibility discussed in section \ref{stage-2-1-framerates} that this style of rendering presents less computational complexity than completely culling real or virtual visuals as was the case throughout all of the stage 1 evaluations and much of the stage 2.1 evaluations.
+Once again the seated VR scenario provided the highest framerates (for the 2 participants for whom these data were captured) out of the three scenarios with an average of 53.8 fps. Both parallel reality scenarios performed slightly slower with an average of 47.7 fps during the 75/25 scenario and 48.3 fps during the 50/50 scenario. Figure \ref{framerates_2-2.png} presents these figures. The difference between the seated VR and the parallel reality scenarios was further reduced in this stage of the evaluation to an 11.3\% slowdown, lower than the 16.4\% slowdown measured in the stage 2.1 evaluation and substantially lower than the 25.2\% slowdown measured in the stage 1 evaluation. The fact that the stage 2.2 parallel reality scenarios were predominantly rendering both real and virtual visuals simultaneously lends weight to the possibility discussed in section \ref{stage-2-1-framerates} that this style of rendering presents less computational complexity than completely culling real or virtual visuals as was the case throughout all of the stage 1 evaluations and much of the stage 2.1 evaluations.
 
 \vspace{2cm}
 
