Corrections to end of chapter 1.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -35,7 +35,7 @@ The central theme of this thesis is the concept of `parallel reality', a new cat
 
 %\vspace{7mm}
 
-\textbf{Parallel Reality:} A system comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them.
+\textbf{Parallel Reality:} A system comprising two environments that the user may freely switch between, one real and the other virtual, both complete unto themselves.
 
 %\vspace{7mm}
 
@@ -47,7 +47,7 @@ The concept of alternate realities has become a mainstay both of science fiction
 	\textit{``Virtual worlds, or as we will now more broadly define them, immersive experiences delivered through the human imagination, have their origins in deep prehistory. Whether these varieties of nonphysical, dreamlike realities were communicated by our ancestors through the imitation of animals, the incarnation of spirits, the painting of scenes on the stone canvasses of caves, the holding of ceremonial rites in temples, or the elaboration of the human story through the fount of theater, humans have craved and crafted virtual-world experiences from the dawn of artistic and linguistic expression.''}~\cite{Damer2014}
 \end{quote}
 
-Within this thesis we are concerned with those alternate realities that through means of computers or other apparatus modify, mediate or create the environmental stimuli received by a subject's senses. Some alternate reality endeavours in this guise have explored the mediation of multiple human senses, from Morton Heilig's 1950's `Sensorama' experience that presented its occupant with a motorcyle ride through combination of film, sound, wind, vibration and odor~\cite{Rheingold1992}, to present day experiences that combine multiple computer generated sensory data such as the Birdly full body flight simulator\footnote{\url{http://birdly.zhdk.ch/}}. However many are focussed upon visual stimuli alone, with other senses suspended or separated, bracketed into a \textit{``different stream of awareness''}~\cite{Adams2014}.
+Within this thesis we are concerned with those alternate realities that through means of computers or other apparatus modify, mediate or create the environmental stimuli received by a subject's senses. Some alternate reality endeavours in this guise have explored the mediation of multiple human senses, from Morton Heilig's 1950's `Sensorama' experience that presented its occupant with a motorcyle ride through combination of film, sound, wind, vibration and odor~\cite{Rheingold1992}, to present day experiences that combine multiple computer generated sensory data such as the Birdly full body flight simulator\footnote{\url{http://birdly.zhdk.ch/}}. However, many are focussed upon visual stimuli alone, with other senses suspended or separated, bracketed into a \textit{``different stream of awareness''}~\cite{Adams2014}.
 
 \begin{quote}
 	\textit{``Sight plays such a prominent part in the mental life that the field of vision is sometimes considered almost synonymous with the field of attention.''}~\cite{Lucas1951}
@@ -104,6 +104,8 @@ In summary the fundamental research objectives addressed by this thesis were to:
 	\item Identify and put into practice suitable assessment techniques to ascertain the merit of parallel reality in relation to previous categories of alternate reality.
 	
 	\item Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects, putting these into practice within real world user studies.
+
+	\item Evaluate user studies to inform creation of best practise recommendations for future parallel reality endeavours.
 	
 \end{enumerate}
 
@@ -111,7 +113,9 @@ In summary the fundamental research objectives addressed by this thesis were to:
 
 \section{Collaborations and Publications}
 \label{collaborations-and-publications}
-While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in the Virtual Time Window and Mirrorshades projects respectively, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
+While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in the Virtual Time Window and Mirrorshades projects respectively, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity\footnote{\url{https://unity3d.com/}} version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
+
+All other work introduced by this thesis was undertaken by the author.
 
 %=====================
 
@@ -140,7 +144,7 @@ In relation to the Virtual Time Window project (see chapter \ref{chapter-vtw}), 
 	\item [4.] Davies, C., Allison, C., and Miller, A. (2013). PolySocial Reality for Education: Addressing the Vacancy Problem with Mobile Cross Reality. Proceedings of the 8th Immersive Education Summit.
 
 	%Digital Heritage Marseille
-	\item [5.] Davies, C., Miller, A., and Allison, C. (2013). Mobile Cross Reality for Cultural Heritage. Proceedings of the 2013 Digital Heritage International Congress (DigitalHeritage) federating the 19th Int'I VSMM, 10th Eurographics GCH, and 2nd UNESCO Memory of the World Conferences, plus special sessions from CAA, Arqueologica 2.0, Space2Place, ICOMOS ICIP and CIPA, EU projects, et al.
+	\item [5.] Davies, C., Miller, A., and Allison, C. (2013). Mobile Cross Reality for Cultural Heritage. Proceedings of the 2013 Digital Heritage International Congress (DigitalHeritage)
 
 \end{itemize}
 
@@ -157,11 +161,14 @@ The Cathedral reconstruction that the Virtual Time Window project (see chapter \
 
 %=====================
 
-The design and development of the Mirrorshades platform (see chapter \ref{chapter-mirrorshades}) was presented in a poster, with accompanying abstract:
+The design and development of the Mirrorshades platform (see chapter \ref{chapter-mirrorshades}) was presented in a poster, with accompanying abstract, and a paper:
 
 \begin{itemize}
 	%VRST
-	\item [7.] Davies, C., Miller, A., and Allison, C. (2014). A View from the Hill: Where Cross Reality Meets Virtual Worlds.  Proceedings of the 20th ACM Symposium on Virtual Reality Software and Technology.	
+	\item [7.] Davies, C., Miller, A., and Allison, C. (2014). A View from the Hill: Where Cross Reality Meets Virtual Worlds.Proceedings of the 20th ACM Symposium on Virtual Reality Software and Technology.
+
+	\item [8.] Davies, C., Miller, A., and Allison, C. (2015). Mobile Onsite Exploration of Parallel Realities with Oculus Rift. Proceedings of the 2015 Digital Heritage International Congress (DigitalHeritage)
+	
 \end{itemize}
 
 %=====================
@@ -171,7 +178,7 @@ Other work from the Open Virtual Worlds group was presented by myself on behalf 
 \begin{itemize}
 	
 	%iED Boston
-	\item [8.] Allison, C., Oliver, I., Miller, A., Davies, C. and McCaffery, J. (2013). From Metaverse to MOOC: Can the Cloud meet Scalability Challenges for Open Virtual Worlds? Proceedings of the 8th Immersive Education Summit.
+	\item [9.] Allison, C., Oliver, I., Miller, A., Davies, C. and McCaffery, J. (2013). From Metaverse to MOOC: Can the Cloud meet Scalability Challenges for Open Virtual Worlds? Proceedings of the 8th Immersive Education Summit.
 	
 \end{itemize}
 
@@ -187,9 +194,9 @@ The contributions of this thesis can be summarized as follows:
 	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience complete real and virtual environments in tandem and represents an avenue for further mitigation of the vacancy problem.
 	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminologies.
 	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
-	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
-	\item Development of a second parallel reality platform, dubbed Mirrorshades, that uses the Unity game engine to combine new virtual reality hardware with novel indoor positioning technology.
-	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
+	\item Exploration into the suitability of an existing state of the art alternate reality modality of interaction (Situated Simulations) for investigation into parallel reality experience, producing the Virtual Time Window platform through extension of the Second Life client.
+	\item Development of a new platform for parallel reality, dubbed Mirrorshades, that uses the Unity game engine to combine the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning technology of IndoorAtlas.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
 	\item Creation and discussion of a set of best practices for future parallel reality endeavours.
 \end{itemize}
 
@@ -220,9 +227,11 @@ Table \ref{objectives} provides an overview of the sections of the thesis in whi
 
 3 & \ref{chapter-vtw} \& \ref{chapter-mirrorshades} & 3, 4, 5 \& 6 \\
 
-4 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 7 \\
+4 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 7 \& 8 \\
 
-5 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 7 \\
+5 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 7 \& 8 \\
+
+6 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 8 \\
 
 \bottomrule
 \end{tabularx}
