Corrections from notes in thesis to end of chapter 2.

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -67,6 +67,7 @@ Likewise the modality of interaction provided by the Mirrorshades platform dista
 %=========================================================================================================
 
 \subsection{St Salvator's Chapel}
+\label{chapel-intro}
 
 The cultural heritage site in mind when developing the Mirrorshades platform was St Salvator's chapel in St Andrews. Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648) the chapel looks markedly different today than it did upon its completion. An existing virtual reconstruction of the chapel as it stood in the period 1450-1460, created by the OVW group, and the marked differences between the internal appearance of the reconstruction and the present day building (including the replacement of the original stone roof with a wooden one and drastically different dividing of the internal space) made the chapel an ideal candidate within the context of cultural heritage for the Mirrorshades parallel reality system to be deployed. The magnitude of the changes between the chapel's original state and how it stands today means that augmented reality would not in fact be able to present a faithful image of how the chapel originally looked, but would need to be combined with substantial application of diminished reality to remove present day features that were not there in the past. For example, when in proximity to the rood screen in its new position (discussed beneath), removing it would require replacing almost the entire viewport with augmented and diminished visuals.
 
