--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -20,7 +20,8 @@
 
 %\section{Introduction}
 
-This chapter explores the ecosystem of alternate realities, studies models that have been introduced to define and distinguish between different categories of alternate reality, produces a well defined taxonomy of alternate reality terms and introduces a model for illustration of alternate reality experience. Parallel reality is introduced into this theoretical framework as a new category of alternate reality, as the combination of a real and a virtual environment in this manner, that allows the user to freely switch between them wherever within them they may be, is not fully encapsulated by any of the existing definitions.
+This chapter explores the ecosystem of alternate realities, studying models that have been introduced in attempts to corroborate the inherently subjective definitions and distinguishing features of different categories of alternate reality. A taxonomy of adopted definitions is used in order to introduce parallel reality in an unambiguous fashion as a new category of alternate reality. Moreover a new model for illustration of alternate reality experience is presented, through the combination of the reality-virtuality continuum of Milgram and Kishino with the three dimensions of virtual experience model of Waterworth and Waterworth, allowing for better explanation of the experiential aspect of the parallel reality concept and the introduction of an extended definition of the vacancy problem.
+
 
 
 
@@ -50,7 +51,7 @@ Alternate realities, explored in the context of this thesis as any situation in 
 	\textit{``It is a characteristic feature of virtuality that it causes puzzlement regarding its relation to reality''}~\cite{Brey2014}
 \end{quote}
 
-The need for a well formulated framework of terms and related definitions for different alternate reality concepts has led to several models that attempt to facilitate better understanding of the distinctions between different categories of alternate reality, most prominent among them the work of Milgram and Kishino in introducing the taxonomy of the reality-virtuality continuum. Not all of these frameworks have agreed upon their definitions of certain categories however, and in some instances there are even cases of contradiction.
+The subjective and debatable nature of alternate reality definitions has led to several models that attempt to facilitate better understanding of the distinctions between different categories of alternate reality, most prominent among them the work of Milgram and Kishino in introducing the taxonomy of the reality-virtuality continuum, but also in the work of Steve Mann and Roy Want. Unsurprisingly these models do not always agree upon their definitions of certain categories, in some instances even contradicting each other. Thus in order to introduce parallel reality in an unambiguous fashion it is necessary to study these existing models and declare which interpretations and definitions this thesis adopts.
 
 %=========================================================================================================
 
@@ -91,16 +92,20 @@ Considering the first case of taking a viewport depicting a real environment and
 \label{stevemannvenn}
 Steve Mann, the \textit{``father of wearable computing''}\footnote{\url{http://www.theguardian.com/technology/2012/apr/05/google-project-glass-digital-goggles}} and one of a group of researchers at MIT that became known as `cyborgs' for their body-worn computers and always-on Internet connections~\cite{Turkle2011}, presented a Venn diagram to illustrate the relationships between the different categories of alternate realities, when reviewing the problems that arose with existing taxonomies in  discussion about reality-modifying devices.
 
-Mann clarifies the use of the term `mediated reality' as \textit{``\ldots\ a general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Mediated reality thus encompasses all of mixed reality, but also the group of \textit{modulated reality} which covers devices such as eyeglasses that use lenses/mirrors to invert the wearer's view, but do not apply computer mediation or modification nor necessarily add or remove any content.
+Mann clarifies the use of the term `mediated reality' as \textit{``\ldots\ a general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Under this definition mediated reality encompasses all of mixed reality, but also the group of \textit{modulated reality} which covers devices such as eyeglasses that use lenses/mirrors to invert the wearer's view, but do not apply computer mediation or modification nor necessarily add or remove any content.
 
 %Alone Together p 151
 
 In this thesis, where we are concerned with alternate realities as those that are created or modified through means of computers or other apparatus (Mann's `devices'), one might want to consider the terms mediated reality and alternate reality to be one and the same. However in the larger consideration of virtual worlds as quoted in section \ref{intro-parallel-reality}, one might wish to reserve mediated reality specifically for the sub set of experiences that rely upon the application of `devices', whilst the super set of all alternate realities would contain, in addition, those experiences of simple imagination, storytelling and psychoactive agents.
 
-Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality as a subset of mixed reality, but then further places virtual reality as a subset of augmented reality and in turn mixed reality, a decision not in fitting with Milgram and Kishino's definitions nor with logical deduction. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can and do exist. Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is arguably contrary to his diagram's representation of virtual reality as a subset of augmented reality and in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality in Milgram and Kishino's definition, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced here for those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment and a wholly virtual environment as the logically possible extremes, as in the reality-virtuality continuum and Steed's concept of primary environments).
+Mann's Venn diagram (reproduced in figure \ref{Mann_venn_original.png} from the original in~\cite{Mann2002a}) situates augmented reality as a subset of mixed reality, in agreement with Milgram and Kishino. However it situates virtual reality as a subset of augmented reality, and in turn mixed reality, which does not agree with Milgram and Kishino. One interpretation of this decision is that Mann considers that virtual reality can exist as an extreme case of augmented reality where nothing but augmentations are present. However the position adopted by this thesis and illustrated in figure \ref{Mann_venn_mod_1.png} which presents a modified version of Mann's Venn diagram adopts the position of the reality-virtuality continuum more strictly. Although Mann and Milgram and Kishino seem to agree that virtual reality is necessarily mediated, this thesis adopts the position from Milgram and Kishino that it is not necessarily always presented as part of an augmented or mixed reality as Mann's diagram would seem to present.
 
-\TwoFig{Mann_venn_original.png} {Mann's Venn diagram of alternate realities.} {Mann_venn_original.png}
-       {Mann_venn_mod_1.png} {Mann's Venn diagram of alternate realities after modification.} {Mann_venn_mod_1.png}
+%Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is arguably contrary to his diagram's representation of virtual reality as a subset of augmented reality and in turn of mixed reality.
+
+The modified diagram also features augmented virtuality in Milgram and Kishino's definition, mentioned by Mann in his prose but not included in his original diagram. An overlap is introduced here for those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality, at least when considering a wholly real environment and a wholly virtual environment as the logically possible extremes, as in Steed's primary environments extension to the reality-virtuality continuum concept.
+
+\TwoFig{Mann_venn_original.png} {Mann's Venn diagram of alternate realities, reproduced from~\cite{Mann2002a}.} {Mann_venn_original.png}
+       {Mann_venn_mod_1.png} {Mann's Venn diagram of alternate realities.} {Mann_venn_mod_1.png}
 
 \begin{figure}[h]
 \centering
@@ -109,7 +114,7 @@ Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reali
   \label{Mann_venn_mod_3.png}
 \end{figure}
 
-Visualising the position of the primary environments, reality and virtual reality, using this same method requires more drastic alteration to the diagram, but is diagnostic in further revealing the relationships between the terms covered in Mann's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that:
+Visualising the position of Steed's primary environments, reality and virtual reality, using the same Venn diagram approach requires more drastic alteration, but is diagnostic in further corroborating the relationships between the terms covered in Mann's literature with others from the wider literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that:
 \begin{itemize}
 	\item Mixed reality is the intersection of reality and virtual reality.
 	\item Mediated reality can be comprised from purely real or purely virtual content.
@@ -118,7 +123,7 @@ Visualising the position of the primary environments, reality and virtual realit
 	\item Augmented reality and augmented virtuality can feature in modulated reality systems.
 \end{itemize}
 
-This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality terms than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram those positions in which a system can exist that is both mixed and modulated, but which is neither augmented reality nor augmented virtuality. Second, the diagram does not accommodate a purely virtual environment that is then modulated; whether such a system would ever be created is debatable, as any modulation that could be performed by modulators external to the virtual environment implementation could almost certainly be better performed by that virtual environment implementation itself.
+This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality terms than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from Mann's original diagram those positions in which a system can exist that is both mixed and modulated, but which is neither augmented reality nor augmented virtuality. Second, the diagram does not accommodate a purely virtual environment that is then modulated; whether such a system would ever be created is debatable, as any modulation that could be performed by modulators external to the virtual environment implementation could almost certainly be better performed by that virtual environment implementation itself.
 
 %=========================================================================================================
 \subsection{Roy Want's Virtuality Matrix}
